--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,22 @@
-/* No CSS *//*# sourceMappingURL=index.css.map */
+.card {
+  border: 1.4px solid black;
+  -webkit-box-shadow: 5px 10px;
+          box-shadow: 5px 10px;
+  border-radius: 5px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 2%;
+  margin: 30px auto;
+}
+
+.container {
+  max-width: 800px;
+  min-width: 300px;
+  margin: 0 auto;
+}
+
+label {
+  display: block;
+  line-height: 2rem;
+}
+/*# sourceMappingURL=index.css.map */
