--- a/src/assets/_global.scss
+++ b/src/assets/_global.scss
@@ -14,7 +14,20 @@
     margin: 0 auto;
 }
 
+.flexbox {
+    display: flex;
+    width: 145px;
+}
+.flexitem {
+    width: 50%;
+}
+
 label {
     display: block;
     line-height: 2rem;
+}
+
+input {
+    display: block;
+    margin: .6rem 0;
 }
