--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,24 @@
   margin: 0 auto;
 }
 
+.flexbox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 145px;
+}
+
+.flexitem {
+  width: 50%;
+}
+
 label {
   display: block;
   line-height: 2rem;
+}
+
+input {
+  display: block;
+  margin: .6rem 0;
 }
 /*# sourceMappingURL=index.css.map */
