--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,16 @@
   border-radius: 5px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  padding: 2%;
+  padding: 5%;
   margin: 30px auto;
 }
 
 .container {
   max-width: 800px;
-  min-width: 300px;
   margin: 0 auto;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 1%;
 }
 
 .flexbox {
@@ -33,6 +35,6 @@ label {
 
 input {
   display: block;
-  margin: .6rem 0;
+  margin: 6px;
 }
 /*# sourceMappingURL=index.css.map */
